Fix #89 feature icon overflow issue. Make feature box titles and images clickable.

--- a/content/_sass/partials/_helpers.scss
+++ b/content/_sass/partials/_helpers.scss
@@ -4,3 +4,11 @@
     position: absolute;
   }
 }
+
+.no-underline {
+  text-decoration: none;
+}
+
+.black-text {
+  color: $black;
+}
