--- a/content/_sass/partials/_type.scss
+++ b/content/_sass/partials/_type.scss
@@ -1,6 +1,8 @@
 body,
 a {
-  word-break: break-word;
+  overflow-wrap: anywhere;
+  // word-break: break-word;
+  word-break: normal;
 }
 
 h1,
