--- a/content/_sass/partials/_users-gallery.scss
+++ b/content/_sass/partials/_users-gallery.scss
@@ -79,7 +79,9 @@
 
   .adopter-row-top {
     order: 2;
-    word-break: break-word;
+    overflow-wrap: anywhere;
+    // word-break: break-word;
+    word-break: normal;
   }
 
   .adopter-title {
